--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ before_install:
   - docker build -t ramanan/docker-react -f Dockerfile.dev .
   
 script:
-  - docker run ramanan/docker-react npm run test -- --coverage
+  - docker run -e CI=true ramanan/docker-react npm run test
+
 
